js/js.translator/testData/incremental/invalidation/suspendFunctions/lib1/l1.3.kt
suspend fun fooX() = 11
suspend inline fun fooY() = 22

object Test {
    suspend fun complex(): Int = fooX() + fooX()
}